Aligned handle behaviour problem in graph editor #39947

Closed
opened 2014-04-29 09:50:51 +02:00 by Ignatz · 8 comments

Windows 7 Pro 64-bit
Intel Core i7-4770K CPU @3.50GHz
ASUS nVidia GeForce GTX 760 2GB GDDR5 DirectCU Mini

Broken:2.70 d8282da

In attempting to cure a previous problem with the curve tension handles (#38594) it appears that a new problem in the behaviour of those curve handles has been introduced.

Select a curve tension handle for editing in the graph editor.

Now press any of the editing function keys – G, R or S – and the handle on the opposite side of the curve anchor point suddenly jumps to a new position.

This is incorrect behaviour and alters the motion curve in a totally undesirable way.

The handle on the opposite side of the anchor point should not change its distance from the anchor point. It should simply move along an arc determine by its original distance from the anchor point. This is indicated by a dashed line in the attached images.

bug_01.jpg bug_02.jpg bug_03.jpg

Please see images and attached blend file. curve-handle-bug.blend

Windows 7 Pro 64-bit Intel Core i7-4770K CPU @3.50GHz ASUS nVidia GeForce GTX 760 2GB GDDR5 DirectCU Mini Broken:2.70 d8282da In attempting to cure a previous problem with the curve tension handles (#38594) it appears that a new problem in the behaviour of those curve handles has been introduced. Select a curve tension handle for editing in the graph editor. Now press any of the editing function keys – G, R or S – and the handle on the opposite side of the curve anchor point suddenly jumps to a new position. This is incorrect behaviour and alters the motion curve in a totally undesirable way. The handle on the opposite side of the anchor point should not change its distance from the anchor point. It should simply move along an arc determine by its original distance from the anchor point. This is indicated by a dashed line in the attached images. ![bug_01.jpg](https://archive.blender.org/developer/F86350/bug_01.jpg) ![bug_02.jpg](https://archive.blender.org/developer/F86352/bug_02.jpg) ![bug_03.jpg](https://archive.blender.org/developer/F86354/bug_03.jpg) Please see images and attached blend file. [curve-handle-bug.blend](https://archive.blender.org/developer/F86356/curve-handle-bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ignatz

Added subscriber: @ignatz
Author

Sorry, I attached the images without the indicated arc. Here are the correct images.

handle_01.jpg handle_02.jpg handle_03.jpg

Sorry, I attached the images without the indicated arc. Here are the correct images. ![handle_01.jpg](https://archive.blender.org/developer/F86357/handle_01.jpg) ![handle_02.jpg](https://archive.blender.org/developer/F86359/handle_02.jpg) ![handle_03.jpg](https://archive.blender.org/developer/F86361/handle_03.jpg)

This issue was referenced by blender/blender-addons-contrib@1ef06abc5e

This issue was referenced by blender/blender-addons-contrib@1ef06abc5e18cd4888444ee19f103c1a89467f01

This issue was referenced by 1ef06abc5e

This issue was referenced by 1ef06abc5e18cd4888444ee19f103c1a89467f01

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1ef06abc5e.

Closed by commit 1ef06abc5e.
Author

Campbell,

I'm sorry, but the corrections you have posted to the code did NOT effectively resolve this problem.

I will post a new bug report a little later in the day to explain.

Campbell, I'm sorry, but the corrections you have posted to the code did **NOT** effectively resolve this problem. I will post a new bug report a little later in the day to explain.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39947
No description provided.