Fix T39947: Aligned handle behaviour problem in graph editor

Error in recent change to handle behavior